# figure-htmx

./: .editorconfig  .gitignore  LICENSE  README.md  conda-lock.yml  dev.py  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.json  uno.config.ts  vercel.json
api/: dev.py  main.py
public/: app.webmanifest  index.html
public/css/: global.css  uno.css
public/js/: uno.global.js
templates/: index.html
