[project]
name = "figure"
description = "Publication-quality figure"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["figure", "htmx"]
authors = [{ name = "Atlanswer", email = "atlanswer@gmail.com" }]
classifiers = [
    "programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy", "pandas", "matplotlib", "loguru"]

[project.optional-dependencies]
dev = ["hatch", "conda-lock", "black", "ipython", "ipykernel", "ruff"]

[project.urls]
Repository = "https://github.com/atlanswer/figure-htmx"

[build-system]
requires = ["hatching"]
build-backend = "hatching.build"

[tool.hatch.version]
path = "figure/__init__.py"

[tool.hatch.envs.default.scripts]
format = "black ."

[tool.conda-lock]
channels = ["conda-forge"]
platforms = ["win-64", "linux-aarch64"]

[tool.black]
line-length = 80
target-version = ["py311"]
